--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/BookStore
 spring.datasource.username=root
 spring.datasource.password=Mayur@12
 spring.jpa.hibernate.ddl-auto=update
+
+#####################
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=barimayur1265@gmail.com
+spring.mail.password=blnvmjipbrzdxeus
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
